eksdeployproject/tooling/modules/security-group/main.tf
resource "aws_security_group" "main" {
  vpc_id = var.vpc_id_main

ingress {
    from_port = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}  
ingress {
    from_port = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}  
ingress {
    from_port = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}  
ingress {
    from_port = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
} 
ingress {
    from_port = 10255
    to_port     = 10255
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}  
#allow all outbound traffic
egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}

tags = {
  Name = "main-sg"
}
}
# resource "aws_security_group" "eks" {
#   vpc_id = var.vpc_id_eks

# ingress {
#     from_port = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
# }    
# ingress {
#     from_port = 443
#     to_port     = 443
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
# }  
# ingress {
#     from_port = 10255
#     to_port     = 10255
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
# }   
# ingress {
#     from_port = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
# }    
# #allow all outbound traffic
# egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
# }

# tags = {
#   Name = "eks-sg"
# }
# }
